--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "nodejs-babel-boilerplate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/main.js",
   "repository": "git@github.com:damiaoterto/nodejs-babel-boilerplate.git",
   "author": "Francisco Damião Terto <hi@damiaojunior.me>",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist/",
     "build": "babel src/ --out-dir dist/",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "lint": "npx eslint --fix src --ext .js"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "rimraf": "^3.0.2"
   }
 }
