--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist/",
+    "dev": "nodemon --exec babel-node src/main.js",
     "build": "babel src/ --out-dir dist/",
     "start": "node dist/main.js",
     "lint": "npx eslint --fix src --ext .js"
@@ -15,10 +16,12 @@
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "nodemon": "^2.0.19",
     "rimraf": "^3.0.2"
   }
 }
